# bitbucket-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MIGRATION_AUTH.md  PACKAGING_SETUP.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: benchmarks.rs
docs/: PACKAGING.md  package.json  pnpm-lock.yaml
docs/public/: llms.txt  robots.txt  sitemap.xml
docs/src/: index.html  main.ts  styles.css
docs/src/app/: app.config.ts  app.routes.ts  app.ts
docs/src/app/components/header/: header.component.ts
docs/src/app/components/sidebar/: sidebar.component.ts
docs/src/app/pages/authentication/: authentication.component.ts
docs/src/app/pages/commands/auth/: auth.component.ts
docs/src/app/pages/configuration/: configuration.component.ts
docs/src/app/pages/home/: home.component.ts
docs/src/app/pages/installation/: installation.component.ts
docs/src/app/pages/not-found/: not-found.component.ts
docs/src/app/pages/tui/: tui.component.ts
packaging/: README.md
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD
packaging/windows/: README.md  main.wxs
scripts/: build-packages.ps1  build-packages.sh
src/: lib.rs  main.rs
src/api/: client.rs  issues.rs  mod.rs  pipelines.rs  pullrequests.rs  repos.rs
src/auth/: api_key.rs  app_password.rs  credential_store.rs  file_store.rs  keyring_store.rs  mod.rs  oauth.rs
src/cli/: auth.rs  issue.rs  mod.rs  pipeline.rs  pr.rs  repo.rs
src/config/: settings.rs
src/models/: issue.rs  mod.rs  pipeline.rs  pr.rs  repo.rs  user.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/views/: dashboard.rs  issues.rs  mod.rs  prs.rs  repos.rs
(+4 files in other folders)
