[package]
name = "bitbucket-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A powerful command-line interface for Bitbucket Cloud - manage repos, PRs, issues, and pipelines from your terminal"
authors = ["Pegasus Heavy Industries"]
license = "MIT"
repository = "https://github.com/pegasusheavy/bitbucket-cli"
homepage = "https://github.com/pegasusheavy/bitbucket-cli"
documentation = "https://pegasusheavy.github.io/bitbucket-cli/"
readme = "README.md"
keywords = ["bitbucket", "cli", "git", "devtools", "tui"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "docs/",
    ".github/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "bitbucket"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.29"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
keyring = "3"
oauth2 = "5"

# Configuration
toml = "0.8"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Output formatting
colored = "2"
tabled = "0.17"
indicatif = "0.17"

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
dialoguer = "0.11"
url = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lib]
name = "bitbucket_cli"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
